[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
itertools = "0.10.0"
array2d = "0.2.1"
multimap = "0.8.3"
chrono = "0.4.19"
chrono-tz = "0.6.0"
dirmod = "0.2.0-alpha.1"
bimap = "0.6.1"
petgraph = "0.6.0"
bitvec = "0.22.3"
hex = "0.4.3"
tap = "1.0.1"
rayon = "1.5.1"